--- a/ExpExtractionSnorkelSpacy.ipynb
+++ b/ExpExtractionSnorkelSpacy.ipynb
@@ -26,7 +26,7 @@
       "pygments_lexer": "ipython3",
       "version": "3.8.5"
     },
-    "accelerator": "GPU"
+    "accelerator": "TPU"
   },
   "cells": [
     {
@@ -331,6 +331,7 @@
         "              doc = nlp(x)\n",
         "              for ent in doc.ents:\n",
         "                if(ent.label_ == 'DATE'):\n",
+        "                  experience_array.append(text)\n",
         "                  return EXP \n",
         "              return SKILL\n",
         "    return ABSTAIN\n",
@@ -31470,41 +31471,10 @@
         "exp_array = []\n",
         "for e in range(len(experience_array)):\n",
         "  exp_array.append(experience_array[e][12:])\n",
-        "  #print(experience_array[e])\n",
+        "  print(experience_array[e])\n",
         "\n"
       ],
-      "execution_count": 21,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "cAi9OITAgnjN",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "import xlwt \n",
-        "from xlwt import Workbook \n",
-        "  \n",
-        "# Workbook is created \n",
-        "wb = Workbook() \n",
-        "  \n",
-        "# add_sheet is used to create sheet. \n",
-        "sheet1 = wb.add_sheet('Sheet 1') \n",
-        "\n",
-        "sheet1.write(0, 0, 'EXPERIENCE')\n",
-        "\n",
-        "counter=1\n",
-        "\n",
-        "for e in exp_array:\n",
-        "  sheet1.write(0, counter,e)\n",
-        "  print(e)\n",
-        "  counter+=1\n",
-        "\n",
-        "wb.save('Experience.xls') "
-      ],
-      "execution_count": 22,
+      "execution_count": 24,
       "outputs": []
     },
     {
